Lab4/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> external_declaration
Rule 2     translation_unit -> translation_unit external_declaration
Rule 3     external_declaration -> function_definition
Rule 4     external_declaration -> declaration
Rule 5     function_definition -> declaration_specifiers declarator declaration_list compound_statement
Rule 6     function_definition -> declarator declaration_list compound_statement
Rule 7     function_definition -> declarator compound_statement
Rule 8     function_definition -> declaration_specifiers declarator compound_statement
Rule 9     declaration -> declaration_specifiers init_declarator_list SEMI
Rule 10    declaration -> declaration_specifiers SEMI
Rule 11    declaration_list -> declaration
Rule 12    declaration_list -> declaration_list declaration
Rule 13    declaration_specifiers -> storage_class_specifier declaration_specifiers
Rule 14    declaration_specifiers -> type_specifier declaration_specifiers
Rule 15    declaration_specifiers -> type_qualifier declaration_specifiers
Rule 16    declaration_specifiers -> storage_class_specifier
Rule 17    declaration_specifiers -> type_specifier
Rule 18    declaration_specifiers -> type_qualifier
Rule 19    storage_class_specifier -> AUTO
Rule 20    storage_class_specifier -> REGISTER
Rule 21    storage_class_specifier -> STATIC
Rule 22    storage_class_specifier -> EXTERN
Rule 23    storage_class_specifier -> TYPEDEF
Rule 24    type_specifier -> VOID
Rule 25    type_specifier -> BOOL
Rule 26    type_specifier -> CHAR
Rule 27    type_specifier -> SHORT
Rule 28    type_specifier -> INT
Rule 29    type_specifier -> LONG
Rule 30    type_specifier -> FLOAT
Rule 31    type_specifier -> DOUBLE
Rule 32    type_specifier -> SIGNED
Rule 33    type_specifier -> UNSIGNED
Rule 34    type_specifier -> struct_or_union_specifier
Rule 35    type_specifier -> enum_specifier
Rule 36    type_specifier -> TYPEID
Rule 37    type_qualifier -> CONST
Rule 38    type_qualifier -> VOLATILE
Rule 39    struct_or_union_specifier -> struct_or_union ID LBRACE struct_declaration_list RBRACE
Rule 40    struct_or_union_specifier -> struct_or_union LBRACE struct_declaration_list RBRACE
Rule 41    struct_or_union_specifier -> struct_or_union ID
Rule 42    struct_or_union -> STRUCT
Rule 43    struct_or_union -> UNION
Rule 44    struct_declaration_list -> struct_declaration
Rule 45    struct_declaration_list -> struct_declaration_list struct_declaration
Rule 46    init_declarator_list -> init_declarator
Rule 47    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 48    init_declarator -> declarator
Rule 49    init_declarator -> declarator EQUALS initializer
Rule 50    struct_declaration -> specifier_qualifier_list struct_declarator_list SEMI
Rule 51    specifier_qualifier_list -> type_specifier specifier_qualifier_list
Rule 52    specifier_qualifier_list -> type_specifier
Rule 53    specifier_qualifier_list -> type_qualifier specifier_qualifier_list
Rule 54    specifier_qualifier_list -> type_qualifier
Rule 55    struct_declarator_list -> struct_declarator
Rule 56    struct_declarator_list -> struct_declarator_list COMMA struct_declarator
Rule 57    struct_declarator -> declarator
Rule 58    struct_declarator -> declarator COLON constant_expression
Rule 59    struct_declarator -> COLON constant_expression
Rule 60    enum_specifier -> ENUM ID LBRACE enumerator_list RBRACE
Rule 61    enum_specifier -> ENUM LBRACE enumerator_list RBRACE
Rule 62    enum_specifier -> ENUM ID
Rule 63    enumerator_list -> enumerator
Rule 64    enumerator_list -> enumerator_list COMMA enumerator
Rule 65    enumerator -> ID
Rule 66    enumerator -> ID EQUALS constant_expression
Rule 67    declarator -> pointer direct_declarator
Rule 68    declarator -> direct_declarator
Rule 69    direct_declarator -> ID
Rule 70    direct_declarator -> LPAREN declarator RPAREN
Rule 71    direct_declarator -> direct_declarator LBRACKET constant_expression_opt RBRACKET
Rule 72    direct_declarator -> direct_declarator LPAREN parameter_type_list RPAREN
Rule 73    direct_declarator -> direct_declarator LPAREN identifier_list RPAREN
Rule 74    direct_declarator -> direct_declarator LPAREN RPAREN
Rule 75    pointer -> TIMES type_qualifier_list
Rule 76    pointer -> TIMES
Rule 77    pointer -> TIMES type_qualifier_list pointer
Rule 78    pointer -> TIMES pointer
Rule 79    type_qualifier_list -> type_qualifier
Rule 80    type_qualifier_list -> type_qualifier_list type_qualifier
Rule 81    parameter_type_list -> parameter_list
Rule 82    parameter_type_list -> parameter_list COMMA ELLIPSIS
Rule 83    parameter_list -> parameter_declaration
Rule 84    parameter_list -> parameter_list COMMA parameter_declaration
Rule 85    parameter_declaration -> declaration_specifiers declarator
Rule 86    parameter_declaration -> declaration_specifiers abstract_declarator_opt
Rule 87    identifier_list -> ID
Rule 88    identifier_list -> identifier_list COMMA ID
Rule 89    initializer -> assignment_expression
Rule 90    initializer -> LBRACE initializer_list RBRACE
Rule 91    initializer -> LBRACE initializer_list COMMA RBRACE
Rule 92    initializer_list -> initializer
Rule 93    initializer_list -> initializer_list COMMA initializer
Rule 94    type_name -> specifier_qualifier_list abstract_declarator_opt
Rule 95    abstract_declarator_opt -> empty
Rule 96    abstract_declarator_opt -> abstract_declarator
Rule 97    abstract_declarator -> pointer
Rule 98    abstract_declarator -> pointer direct_abstract_declarator
Rule 99    abstract_declarator -> direct_abstract_declarator
Rule 100   direct_abstract_declarator -> LPAREN abstract_declarator RPAREN
Rule 101   direct_abstract_declarator -> direct_abstract_declarator LBRACKET constant_expression_opt RBRACKET
Rule 102   direct_abstract_declarator -> LBRACKET constant_expression_opt RBRACKET
Rule 103   direct_abstract_declarator -> direct_abstract_declarator LPAREN parameter_type_list_opt RPAREN
Rule 104   direct_abstract_declarator -> LPAREN parameter_type_list_opt RPAREN
Rule 105   constant_expression_opt -> empty
Rule 106   constant_expression_opt -> constant_expression
Rule 107   parameter_type_list_opt -> empty
Rule 108   parameter_type_list_opt -> parameter_type_list
Rule 109   statement -> labeled_statement
Rule 110   statement -> expression_statement
Rule 111   statement -> compound_statement
Rule 112   statement -> selection_statement
Rule 113   statement -> iteration_statement
Rule 114   statement -> jump_statement
Rule 115   labeled_statement -> ID COLON statement
Rule 116   labeled_statement -> CASE constant_expression COLON statement
Rule 117   labeled_statement -> DEFAULT COLON statement
Rule 118   expression_statement -> expression_opt SEMI
Rule 119   compound_statement -> LBRACE declaration_list statement_list RBRACE
Rule 120   compound_statement -> LBRACE statement_list RBRACE
Rule 121   compound_statement -> LBRACE declaration_list RBRACE
Rule 122   compound_statement -> LBRACE RBRACE
Rule 123   statement_list -> statement
Rule 124   statement_list -> statement_list statement
Rule 125   selection_statement -> IF LPAREN expression RPAREN statement
Rule 126   selection_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 127   selection_statement -> SWITCH LPAREN expression RPAREN statement
Rule 128   iteration_statement -> WHILE LPAREN expression RPAREN statement
Rule 129   iteration_statement -> FOR LPAREN expression_opt SEMI expression_opt SEMI expression_opt RPAREN statement
Rule 130   iteration_statement -> DO statement WHILE LPAREN expression RPAREN SEMI
Rule 131   jump_statement -> GOTO ID SEMI
Rule 132   jump_statement -> CONTINUE SEMI
Rule 133   jump_statement -> BREAK SEMI
Rule 134   jump_statement -> RETURN expression_opt SEMI
Rule 135   expression_opt -> empty
Rule 136   expression_opt -> expression
Rule 137   expression -> assignment_expression
Rule 138   expression -> expression COMMA assignment_expression
Rule 139   assignment_expression -> conditional_expression
Rule 140   assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 141   assignment_operator -> EQUALS
Rule 142   assignment_operator -> TIMESEQUAL
Rule 143   assignment_operator -> DIVEQUAL
Rule 144   assignment_operator -> MODEQUAL
Rule 145   assignment_operator -> PLUSEQUAL
Rule 146   assignment_operator -> MINUSEQUAL
Rule 147   assignment_operator -> LSHIFTEQUAL
Rule 148   assignment_operator -> RSHIFTEQUAL
Rule 149   assignment_operator -> ANDEQUAL
Rule 150   assignment_operator -> OREQUAL
Rule 151   assignment_operator -> XOREQUAL
Rule 152   conditional_expression -> logical_or_expression
Rule 153   conditional_expression -> logical_or_expression CONDOP expression COLON conditional_expression
Rule 154   constant_expression -> conditional_expression
Rule 155   logical_or_expression -> logical_and_expression
Rule 156   logical_or_expression -> logical_or_expression LOR logical_and_expression
Rule 157   logical_and_expression -> inclusive_or_expression
Rule 158   logical_and_expression -> logical_and_expression LAND inclusive_or_expression
Rule 159   inclusive_or_expression -> exclusive_or_expression
Rule 160   inclusive_or_expression -> inclusive_or_expression OR exclusive_or_expression
Rule 161   exclusive_or_expression -> and_expression
Rule 162   exclusive_or_expression -> exclusive_or_expression XOR and_expression
Rule 163   and_expression -> equality_expression
Rule 164   and_expression -> and_expression AND equality_expression
Rule 165   equality_expression -> relational_expression
Rule 166   equality_expression -> equality_expression EQ relational_expression
Rule 167   equality_expression -> equality_expression NE relational_expression
Rule 168   relational_expression -> shift_expression
Rule 169   relational_expression -> relational_expression LT shift_expression
Rule 170   relational_expression -> relational_expression GT shift_expression
Rule 171   relational_expression -> relational_expression LE shift_expression
Rule 172   relational_expression -> relational_expression GE shift_expression
Rule 173   shift_expression -> additive_expression
Rule 174   shift_expression -> shift_expression LSHIFT additive_expression
Rule 175   shift_expression -> shift_expression RSHIFT additive_expression
Rule 176   additive_expression -> multiplicative_expression
Rule 177   additive_expression -> additive_expression PLUS multiplicative_expression
Rule 178   additive_expression -> additive_expression MINUS multiplicative_expression
Rule 179   multiplicative_expression -> cast_expression
Rule 180   multiplicative_expression -> multiplicative_expression TIMES cast_expression
Rule 181   multiplicative_expression -> multiplicative_expression DIVIDE cast_expression
Rule 182   multiplicative_expression -> multiplicative_expression MOD cast_expression
Rule 183   cast_expression -> unary_expression
Rule 184   cast_expression -> LPAREN type_name RPAREN cast_expression
Rule 185   unary_expression -> postfix_expression
Rule 186   unary_expression -> PLUSPLUS unary_expression
Rule 187   unary_expression -> MINUSMINUS unary_expression
Rule 188   unary_expression -> unary_operator cast_expression
Rule 189   unary_expression -> SIZEOF unary_expression
Rule 190   unary_expression -> SIZEOF LPAREN type_name RPAREN
Rule 191   unary_operator -> AND
Rule 192   unary_operator -> TIMES
Rule 193   unary_operator -> PLUS
Rule 194   unary_operator -> MINUS
Rule 195   unary_operator -> NOT
Rule 196   unary_operator -> LNOT
Rule 197   postfix_expression -> primary_expression
Rule 198   postfix_expression -> postfix_expression LBRACKET expression RBRACKET
Rule 199   postfix_expression -> postfix_expression LPAREN argument_expression_list RPAREN
Rule 200   postfix_expression -> postfix_expression LPAREN RPAREN
Rule 201   postfix_expression -> postfix_expression PERIOD ID
Rule 202   postfix_expression -> postfix_expression ARROW ID
Rule 203   postfix_expression -> postfix_expression PLUSPLUS
Rule 204   postfix_expression -> postfix_expression MINUSMINUS
Rule 205   primary_expression -> ID
Rule 206   primary_expression -> constant
Rule 207   primary_expression -> SCONST
Rule 208   primary_expression -> LPAREN expression RPAREN
Rule 209   argument_expression_list -> assignment_expression
Rule 210   argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 211   constant -> ICONST
Rule 212   constant -> FCONST
Rule 213   constant -> CCONST
Rule 214   empty -> <empty>

Terminals, with rules where they appear

AND                  : 164 191
ANDEQUAL             : 149
ARROW                : 202
AUTO                 : 19
BOOL                 : 25
BREAK                : 133
CASE                 : 116
CCONST               : 213
CHAR                 : 26
COLON                : 58 59 115 116 117 153
COMMA                : 47 56 64 82 84 88 91 93 138 210
CONDOP               : 153
CONST                : 37
CONTINUE             : 132
DEFAULT              : 117
DIVEQUAL             : 143
DIVIDE               : 181
DO                   : 130
DOUBLE               : 31
ELLIPSIS             : 82
ELSE                 : 126
ENUM                 : 60 61 62
EQ                   : 166
EQUALS               : 49 66 141
EXTERN               : 22
FCONST               : 212
FLOAT                : 30
FOR                  : 129
GE                   : 172
GOTO                 : 131
GT                   : 170
ICONST               : 211
ID                   : 39 41 60 62 65 66 69 87 88 115 131 201 202 205
IF                   : 125 126
INT                  : 28
LAND                 : 158
LBRACE               : 39 40 60 61 90 91 119 120 121 122
LBRACKET             : 71 101 102 198
LE                   : 171
LNOT                 : 196
LONG                 : 29
LOR                  : 156
LPAREN               : 70 72 73 74 100 103 104 125 126 127 128 129 130 184 190 199 200 208
LSHIFT               : 174
LSHIFTEQUAL          : 147
LT                   : 169
MINUS                : 178 194
MINUSEQUAL           : 146
MINUSMINUS           : 187 204
MOD                  : 182
MODEQUAL             : 144
NE                   : 167
NOT                  : 195
OR                   : 160
OREQUAL              : 150
PERIOD               : 201
PLUS                 : 177 193
PLUSEQUAL            : 145
PLUSPLUS             : 186 203
RBRACE               : 39 40 60 61 90 91 119 120 121 122
RBRACKET             : 71 101 102 198
REGISTER             : 20
RETURN               : 134
RPAREN               : 70 72 73 74 100 103 104 125 126 127 128 129 130 184 190 199 200 208
RSHIFT               : 175
RSHIFTEQUAL          : 148
SCONST               : 207
SEMI                 : 9 10 50 118 129 129 130 131 132 133 134
SHORT                : 27
SIGNED               : 32
SIZEOF               : 189 190
STATIC               : 21
STRUCT               : 42
SWITCH               : 127
TIMES                : 75 76 77 78 180 192
TIMESEQUAL           : 142
TYPEDEF              : 23
TYPEID               : 36
UNION                : 43
UNSIGNED             : 33
VOID                 : 24
VOLATILE             : 38
WHILE                : 128 130
XOR                  : 162
XOREQUAL             : 151
error                : 

Nonterminals, with rules where they appear

abstract_declarator  : 96 100
abstract_declarator_opt : 86 94
additive_expression  : 173 174 175 177 178
and_expression       : 161 162 164
argument_expression_list : 199 210
assignment_expression : 89 137 138 140 209 210
assignment_operator  : 140
cast_expression      : 179 180 181 182 184 188
compound_statement   : 5 6 7 8 111
conditional_expression : 139 153 154
constant             : 206
constant_expression  : 58 59 66 106 116
constant_expression_opt : 71 101 102
declaration          : 4 11 12
declaration_list     : 5 6 12 119 121
declaration_specifiers : 5 8 9 10 13 14 15 85 86
declarator           : 5 6 7 8 48 49 57 58 70 85
direct_abstract_declarator : 98 99 101 103
direct_declarator    : 67 68 71 72 73 74
empty                : 95 105 107 135
enum_specifier       : 35
enumerator           : 63 64
enumerator_list      : 60 61 64
equality_expression  : 163 164 166 167
exclusive_or_expression : 159 160 162
expression           : 125 126 127 128 130 136 138 153 198 208
expression_opt       : 118 129 129 129 134
expression_statement : 110
external_declaration : 1 2
function_definition  : 3
identifier_list      : 73 88
inclusive_or_expression : 157 158 160
init_declarator      : 46 47
init_declarator_list : 9 47
initializer          : 49 92 93
initializer_list     : 90 91 93
iteration_statement  : 113
jump_statement       : 114
labeled_statement    : 109
logical_and_expression : 155 156 158
logical_or_expression : 152 153 156
multiplicative_expression : 176 177 178 180 181 182
parameter_declaration : 83 84
parameter_list       : 81 82 84
parameter_type_list  : 72 108
parameter_type_list_opt : 103 104
pointer              : 67 77 78 97 98
postfix_expression   : 185 198 199 200 201 202 203 204
primary_expression   : 197
relational_expression : 165 166 167 169 170 171 172
selection_statement  : 112
shift_expression     : 168 169 170 171 172 174 175
specifier_qualifier_list : 50 51 53 94
statement            : 115 116 117 123 124 125 126 126 127 128 129 130
statement_list       : 119 120 124
storage_class_specifier : 13 16
struct_declaration   : 44 45
struct_declaration_list : 39 40 45
struct_declarator    : 55 56
struct_declarator_list : 50 56
struct_or_union      : 39 40 41
struct_or_union_specifier : 34
translation_unit     : 2 0
type_name            : 184 190
type_qualifier       : 15 18 53 54 79 80
type_qualifier_list  : 75 77 80
type_specifier       : 14 17 51 52
unary_expression     : 140 183 186 187 189
unary_operator       : 188

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . external_declaration
    (2) translation_unit -> . translation_unit external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (6) function_definition -> . declarator declaration_list compound_statement
    (7) function_definition -> . declarator compound_statement
    (8) function_definition -> . declaration_specifiers declarator compound_statement
    (9) declaration -> . declaration_specifiers init_declarator_list SEMI
    (10) declaration -> . declaration_specifiers SEMI
    (13) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (14) declaration_specifiers -> . type_specifier declaration_specifiers
    (15) declaration_specifiers -> . type_qualifier declaration_specifiers
    (16) declaration_specifiers -> . storage_class_specifier
    (17) declaration_specifiers -> . type_specifier
    (18) declaration_specifiers -> . type_qualifier
    (67) declarator -> . pointer direct_declarator
    (68) declarator -> . direct_declarator
    (19) storage_class_specifier -> . AUTO
    (20) storage_class_specifier -> . REGISTER
    (21) storage_class_specifier -> . STATIC
    (22) storage_class_specifier -> . EXTERN
    (23) storage_class_specifier -> . TYPEDEF
    (24) type_specifier -> . VOID
    (25) type_specifier -> . BOOL
    (26) type_specifier -> . CHAR
    (27) type_specifier -> . SHORT
    (28) type_specifier -> . INT
    (29) type_specifier -> . LONG
    (30) type_specifier -> . FLOAT
    (31) type_specifier -> . DOUBLE
    (32) type_specifier -> . SIGNED
    (33) type_specifier -> . UNSIGNED
    (34) type_specifier -> . struct_or_union_specifier
    (35) type_specifier -> . enum_specifier
    (36) type_specifier -> . TYPEID
    (37) type_qualifier -> . CONST
    (38) type_qualifier -> . VOLATILE
    (75) pointer -> . TIMES type_qualifier_list
    (76) pointer -> . TIMES
    (77) pointer -> . TIMES type_qualifier_list pointer
    (78) pointer -> . TIMES pointer
    (69) direct_declarator -> . ID
    (70) direct_declarator -> . LPAREN declarator RPAREN
    (71) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (72) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (73) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (74) direct_declarator -> . direct_declarator LPAREN RPAREN
    (39) struct_or_union_specifier -> . struct_or_union ID LBRACE struct_declaration_list RBRACE
    (40) struct_or_union_specifier -> . struct_or_union LBRACE struct_declaration_list RBRACE
    (41) struct_or_union_specifier -> . struct_or_union ID
    (60) enum_specifier -> . ENUM ID LBRACE enumerator_list RBRACE
    (61) enum_specifier -> . ENUM LBRACE enumerator_list RBRACE
    (62) enum_specifier -> . ENUM ID
    (42) struct_or_union -> . STRUCT
    (43) struct_or_union -> . UNION

    AUTO            shift and go to state 12
    REGISTER        shift and go to state 13
    STATIC          shift and go to state 14
    EXTERN          shift and go to state 15
    TYPEDEF         shift and go to state 16
    VOID            shift and go to state 17
    BOOL            shift and go to state 18
    CHAR            shift and go to state 19
    SHORT           shift and go to state 20
    INT             shift and go to state 21
    LONG            shift and go to state 22
    FLOAT           shift and go to state 23
    DOUBLE          shift and go to state 24
    SIGNED          shift and go to state 25
    UNSIGNED        shift and go to state 26
    TYPEID          shift and go to state 29
    CONST           shift and go to state 30
    VOLATILE        shift and go to state 31
    TIMES           shift and go to state 32
    ID              shift and go to state 33
    LPAREN          shift and go to state 34
    ENUM            shift and go to state 36
    STRUCT          shift and go to state 37
    UNION           shift and go to state 38

    translation_unit               shift and go to state 1
    external_declaration           shift and go to state 2
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    declarator                     shift and go to state 6
    storage_class_specifier        shift and go to state 7
    type_specifier                 shift and go to state 8
    type_qualifier                 shift and go to state 9
    pointer                        shift and go to state 10
    direct_declarator              shift and go to state 11
    struct_or_union_specifier      shift and go to state 27
    enum_specifier                 shift and go to state 28
    struct_or_union                shift and go to state 35

state 1

    (0) S' -> translation_unit .
    (2) translation_unit -> translation_unit . external_declaration
    (3) external_declaration -> . function_definition
    (4) external_declaration -> . declaration
    (5) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (6) function_definition -> . declarator declaration_list compound_statement
    (7) function_definition -> . declarator compound_statement
    (8) function_definition -> . declaration_specifiers declarator compound_statement
    (9) declaration -> . declaration_specifiers init_declarator_list SEMI
    (10) declaration -> . declaration_specifiers SEMI
    (13) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (14) declaration_specifiers -> . type_specifier declaration_specifiers
    (15) declaration_specifiers -> . type_qualifier declaration_specifiers
    (16) declaration_specifiers -> . storage_class_specifier
    (17) declaration_specifiers -> . type_specifier
    (18) declaration_specifiers -> . type_qualifier
    (67) declarator -> . pointer direct_declarator
    (68) declarator -> . direct_declarator
    (19) storage_class_specifier -> . AUTO
    (20) storage_class_specifier -> . REGISTER
    (21) storage_class_specifier -> . STATIC
    (22) storage_class_specifier -> . EXTERN
    (23) storage_class_specifier -> . TYPEDEF
    (24) type_specifier -> . VOID
    (25) type_specifier -> . BOOL
    (26) type_specifier -> . CHAR
    (27) type_specifier -> . SHORT
    (28) type_specifier -> . INT
    (29) type_specifier -> . LONG
    (30) type_specifier -> . FLOAT
    (31) type_specifier -> . DOUBLE
    (32) type_specifier -> . SIGNED
    (33) type_specifier -> . UNSIGNED
    (34) type_specifier -> . struct_or_union_specifier
    (35) type_specifier -> . enum_specifier
    (36) type_specifier -> . TYPEID
    (37) type_qualifier -> . CONST
    (38) type_qualifier -> . VOLATILE
    (75) pointer -> . TIMES type_qualifier_list
    (76) pointer -> . TIMES
    (77) pointer -> . TIMES type_qualifier_list pointer
    (78) pointer -> . TIMES pointer
    (69) direct_declarator -> . ID
    (70) direct_declarator -> . LPAREN declarator RPAREN
    (71) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (72) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (73) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (74) direct_declarator -> . direct_declarator LPAREN RPAREN
    (39) struct_or_union_specifier -> . struct_or_union ID LBRACE struct_declaration_list RBRACE
    (40) struct_or_union_specifier -> . struct_or_union LBRACE struct_declaration_list RBRACE
    (41) struct_or_union_specifier -> . struct_or_union ID
    (60) enum_specifier -> . ENUM ID LBRACE enumerator_list RBRACE
    (61) enum_specifier -> . ENUM LBRACE enumerator_list RBRACE
    (62) enum_specifier -> . ENUM ID
    (42) struct_or_union -> . STRUCT
    (43) struct_or_union -> . UNION

    AUTO            shift and go to state 12
    REGISTER        shift and go to state 13
    STATIC          shift and go to state 14
    EXTERN          shift and go to state 15
    TYPEDEF         shift and go to state 16
    VOID            shift and go to state 17
    BOOL            shift and go to state 18
    CHAR            shift and go to state 19
    SHORT           shift and go to state 20
    INT             shift and go to state 21
    LONG            shift and go to state 22
    FLOAT           shift and go to state 23
    DOUBLE          shift and go to state 24
    SIGNED          shift and go to state 25
    UNSIGNED        shift and go to state 26
    TYPEID          shift and go to state 29
    CONST           shift and go to state 30
    VOLATILE        shift and go to state 31
    TIMES           shift and go to state 32
    ID              shift and go to state 33
    LPAREN          shift and go to state 34
    ENUM            shift and go to state 36
    STRUCT          shift and go to state 37
    UNION           shift and go to state 38

    external_declaration           shift and go to state 39
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    declarator                     shift and go to state 6
    storage_class_specifier        shift and go to state 7
    type_specifier                 shift and go to state 8
    type_qualifier                 shift and go to state 9
    pointer                        shift and go to state 10
    direct_declarator              shift and go to state 11
    struct_or_union_specifier      shift and go to state 27
    enum_specifier                 shift and go to state 28
    struct_or_union                shift and go to state 35

state 2

    (1) translation_unit -> external_declaration .

    AUTO            reduce using rule 1 (translation_unit -> external_declaration .)
    REGISTER        reduce using rule 1 (translation_unit -> external_declaration .)
    STATIC          reduce using rule 1 (translation_unit -> external_declaration .)
    EXTERN          reduce using rule 1 (translation_unit -> external_declaration .)
    TYPEDEF         reduce using rule 1 (translation_unit -> external_declaration .)
    VOID            reduce using rule 1 (translation_unit -> external_declaration .)
    BOOL            reduce using rule 1 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 1 (translation_unit -> external_declaration .)
    SHORT           reduce using rule 1 (translation_unit -> external_declaration .)
    INT             reduce using rule 1 (translation_unit -> external_declaration .)
    LONG            reduce using rule 1 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 1 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 1 (translation_unit -> external_declaration .)
    SIGNED          reduce using rule 1 (translation_unit -> external_declaration .)
    UNSIGNED        reduce using rule 1 (translation_unit -> external_declaration .)
    TYPEID          reduce using rule 1 (translation_unit -> external_declaration .)
    CONST           reduce using rule 1 (translation_unit -> external_declaration .)
    VOLATILE        reduce using rule 1 (translation_unit -> external_declaration .)
    TIMES           reduce using rule 1 (translation_unit -> external_declaration .)
    ID              reduce using rule 1 (translation_unit -> external_declaration .)
    LPAREN          reduce using rule 1 (translation_unit -> external_declaration .)
    ENUM            reduce using rule 1 (translation_unit -> external_declaration .)
    STRUCT          reduce using rule 1 (translation_unit -> external_declaration .)
    UNION           reduce using rule 1 (translation_unit -> external_declaration .)
    $end            reduce using rule 1 (translation_unit -> external_declaration .)


state 3

    (3) external_declaration -> function_definition .

    AUTO            reduce using rule 3 (external_declaration -> function_definition .)
    REGISTER        reduce using rule 3 (external_declaration -> function_definition .)
    STATIC          reduce using rule 3 (external_declaration -> function_definition .)
    EXTERN          reduce using rule 3 (external_declaration -> function_definition .)
    TYPEDEF         reduce using rule 3 (external_declaration -> function_definition .)
    VOID            reduce using rule 3 (external_declaration -> function_definition .)
    BOOL            reduce using rule 3 (external_declaration -> function_definition .)
    CHAR            reduce using rule 3 (external_declaration -> function_definition .)
    SHORT           reduce using rule 3 (external_declaration -> function_definition .)
    INT             reduce using rule 3 (external_declaration -> function_definition .)
    LONG            reduce using rule 3 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 3 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 3 (external_declaration -> function_definition .)
    SIGNED          reduce using rule 3 (external_declaration -> function_definition .)
    UNSIGNED        reduce using rule 3 (external_declaration -> function_definition .)
    TYPEID          reduce using rule 3 (external_declaration -> function_definition .)
    CONST           reduce using rule 3 (external_declaration -> function_definition .)
    VOLATILE        reduce using rule 3 (external_declaration -> function_definition .)
    TIMES           reduce using rule 3 (external_declaration -> function_definition .)
    ID              reduce using rule 3 (external_declaration -> function_definition .)
    LPAREN          reduce using rule 3 (external_declaration -> function_definition .)
    ENUM            reduce using rule 3 (external_declaration -> function_definition .)
    STRUCT          reduce using rule 3 (external_declaration -> function_definition .)
    UNION           reduce using rule 3 (external_declaration -> function_definition .)
    $end            reduce using rule 3 (external_declaration -> function_definition .)


state 4

    (4) external_declaration -> declaration .

    AUTO            reduce using rule 4 (external_declaration -> declaration .)
    REGISTER        reduce using rule 4 (external_declaration -> declaration .)
    STATIC          reduce using rule 4 (external_declaration -> declaration .)
    EXTERN          reduce using rule 4 (external_declaration -> declaration .)
    TYPEDEF         reduce using rule 4 (external_declaration -> declaration .)
    VOID            reduce using rule 4 (external_declaration -> declaration .)
    BOOL            reduce using rule 4 (external_declaration -> declaration .)
    CHAR            reduce using rule 4 (external_declaration -> declaration .)
    SHORT           reduce using rule 4 (external_declaration -> declaration .)
    INT             reduce using rule 4 (external_declaration -> declaration .)
    LONG            reduce using rule 4 (external_declaration -> declaration .)
    FLOAT           reduce using rule 4 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 4 (external_declaration -> declaration .)
    SIGNED          reduce using rule 4 (external_declaration -> declaration .)
    UNSIGNED        reduce using rule 4 (external_declaration -> declaration .)
    TYPEID          reduce using rule 4 (external_declaration -> declaration .)
    CONST           reduce using rule 4 (external_declaration -> declaration .)
    VOLATILE        reduce using rule 4 (external_declaration -> declaration .)
    TIMES           reduce using rule 4 (external_declaration -> declaration .)
    ID              reduce using rule 4 (external_declaration -> declaration .)
    LPAREN          reduce using rule 4 (external_declaration -> declaration .)
    ENUM            reduce using rule 4 (external_declaration -> declaration .)
    STRUCT          reduce using rule 4 (external_declaration -> declaration .)
    UNION           reduce using rule 4 (external_declaration -> declaration .)
    $end            reduce using rule 4 (external_declaration -> declaration .)


state 5

    (5) function_definition -> declaration_specifiers . declarator declaration_list compound_statement
    (8) function_definition -> declaration_specifiers . declarator compound_statement
    (9) declaration -> declaration_specifiers . init_declarator_list SEMI
    (10) declaration -> declaration_specifiers . SEMI
    (67) declarator -> . pointer direct_declarator
    (68) declarator -> . direct_declarator
    (46) init_declarator_list -> . init_declarator
    (47) init_declarator_list -> . init_declarator_list COMMA init_declarator
    (75) pointer -> . TIMES type_qualifier_list
    (76) pointer -> . TIMES
    (77) pointer -> . TIMES type_qualifier_list pointer
    (78) pointer -> . TIMES pointer
    (69) direct_declarator -> . ID
    (70) direct_declarator -> . LPAREN declarator RPAREN
    (71) direct_declarator -> . direct_declarator LBRACKET constant_expression_opt RBRACKET
    (72) direct_declarator -> . direct_declarator LPAREN parameter_type_list RPAREN
    (73) direct_declarator -> . direct_declarator LPAREN identifier_list RPAREN
    (74) direct_declarator -> . direct_declarator LPAREN RPAREN
    (48) init_declarator -> . declarator
    (49) init_declarator -> . declarator EQUALS initializer

    SEMI            shift and go to state 42
    TIMES           shift and go to state 32
    ID              shift and go to state 33
    LPAREN          shift and go to state 34

    declarator                     shift and go to state 40
    init_declarator_list           shift and go to state 41
    pointer                        shift and go to state 10
    direct_declarator              shift and go to state 11
    init_declarator                shift and go to state 43

state 6
